fixed styled on mobile galelry section

--- a/site/styles/content_mobile.less
+++ b/site/styles/content_mobile.less
@@ -172,7 +172,7 @@ section.discount img {
 
 section.gallery {
 	text-align: center;
-	padding-top: 100px;
+	padding-top: 1em;
 }
 
 section.gallery div.container {
@@ -182,12 +182,25 @@ section.gallery div.container {
 	height: 213px;
 	width: 320px;
 	position: relative;
-	padding: 100px 0;
-	margin: 0 auto;
+	margin-right: auto;
+	margin-left: auto;
+	margin-top: 100px;
 }
 
-section.gallery div.container.right {
+section.gallery h2 {
+	font-weight: 300;
+	color: @color_brown;
+}
 
+section.gallery div.container h3 {
+	display: block;
+	width: 100%;
+	position: absolute;
+	top: -100px;
+	left: 50%;
+	transform: translateX(-50%);
+	font-weight: 300;
+	color: @color_brown;
 }
 
 section.gallery div.container div.portfolio {
